@@ -1,6 +1,7 @@
 <?php
 // $Id$
 include_once 'includes/init.php';
+require_valid_referring_url ();
 
 $credits = getPostValue( 'Credits' );
 static $data;
