@@ -32,6 +32,7 @@
  * or you are an admin user.
  */
 include_once 'includes/init.php';
+require_valid_referring_url ();
 load_user_categories();
 
 $error = ( empty( $REPORTS_ENABLED ) || $REPORTS_ENABLED != 'Y'
