@@ -13,6 +13,7 @@
  * create) will remain unchanged.
  */
 include_once 'includes/init.php';
+require_valid_referring_url ();
 
 // Set this to true do show the SQL at the bottom of the page
 $purgeDebug = false;
