@@ -12,6 +12,7 @@
  * @version $Id$
  */
 include_once 'includes/init.php';
+require_valid_referring_url ();
 
 $error = '';
 
